# Auto_Discover_LowThermalConductivity_Materials

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  character.ipynb  main.py  main_bo_ai_guarded.py  main_bo_only.py  pyproject.toml  requirements.txt
config/: agentos_params.csv  config.yaml  llm_config.yaml
data/: processed_data.csv
doc/: Theoretical_principle_document.md
src/: __init__.py
src/LLMconfig/: available_keys.txt
src/agents/: ai_client.py  bayesian_runner.py  calculate_agent.py  coordinator_agent.py  deduplicate_success.py  document_reader.py  final_structure_novelty.py  llm_models.py  material_evaluator.py  screening_agent.py  success_learner.py  theory_agent.py  update_document.py
src/analysis/: __init__.py  atomic_props_cache.json  character_feature_bootstrap.py
src/database/: __init__.py  aflow_tool.py  models.py  mp_tool.py  normalizers.py  oqmd_tool.py
src/generators/: acquisition_ei.py  monte_carlo_sampler.py
src/models/: README.md  train_gpr_model.py
src/schemas/: __init__.py  workflow_input.py
src/tools/: __init__.py  add_formula_column.py  ai4kappa_wrapper.py  base_tool.py  crystallm_wrapper.py  mattersim_wrapper.py  phonon_parallel.py  structure_deduplicator.py  structure_parallel.py  success_extractor.py  update_gpr_model.py
src/tools/crystallm/: LICENSE.upstream  README.md  __init__.py  generate_crystal.py  generator.py
src/tools/crystallm/crystallm/: _utils.py
src/tools/kappa_lib/: __init__.py  calculator.py  predict.py
src/tools/kappa_lib/cgcnn/: data.py
src/tools/kappa_lib/model/: Shear modulus (GPa)-pre-trained.pth.tar
src/tools/kappa_lib/root_dir_3935e595-bd0d-4168-95c7-59f458c7d17b/: id_prop.csv  pre-trained.pth.tar  structure_1.cif
src/tools/kappa_lib/root_dir_adb5281e-9c01-41e8-a909-26b892cf6454/: id_prop.csv  structure_1.cif  structure_2.cif  structure_3.cif  structure_4.cif  structure_5.cif
src/tools/kappa_lib/streamlit_scripts/: __init__.py  calculate_K.py  chang_model.py  file_op.py
src/utils/: __init__.py  advanced_analysis.py  bo_runtime.py  cache.py  config_loader.py  explainability.py  hyperparameter_optimizer.py  parallel.py  param_sheet.py  path_config.py  progress_manager.py  progress_tracker.py  reproducibility.py  result_analyzer.py  rollback_data.py  theory_doc_context.py  types.py  update_dataset.py  workflow_resume.py
src/workflow/: __init__.py  agno_pipeline.py  agno_state.py  agno_steps.py  guarded_selection.py  step_ai_evaluation.py  step_bayesian_optimization.py  step_extract_materials.py  step_merge_results.py  step_structure_calculation.py  step_train_model.py  step_update_data_doc.py
